--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
     <div class="gallery">
       <!-- Картки зображень -->
     </div>
-    
+
+    <div id="sentinel"></div>
+
+    <script src="index.js" type="module"></script>
   </body>
 </html>
